--- a/Frontend/src/components/common/Navbar.module.css
+++ b/Frontend/src/components/common/Navbar.module.css
@@ -3,9 +3,12 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  height: 50px;
-  position: sticky;
+  height: 60px;
+  position: fixed;
+  top: 0;
+  padding: 10px 20px;
   z-index: 1110;
+  backdrop-filter: blur(8px);
 }
 
 .navLink {
@@ -17,8 +20,16 @@
 }
 
 .logoImg {
-  width: 27px;
-  height: 34px;
+  width: 2.2rem;
+  height: 2rem;
+  margin-top: 3px;
+}
+
+.logoTxt {
+  color: var(--point-color);
+  font-size: 1.3rem;
+  margin: 8px 0 0 6px;
+  font-weight: bold;
 }
 
 .rightContainer {
@@ -26,14 +37,8 @@
   gap: 1rem;
 }
 
-.logoTxt {
-  color: var(--point-color);
-  font-size: 18px;
-  margin: 8px 0 0 6px;
-}
-
 .notification {
   color: #7D7D7D;
-  font-size: 24px;
-  margin-top: 5px;
+  font-size: 1.9rem;
+  margin-top: 3px;
 }
