--- a/Frontend/src/components/common/NavbarHamburger.module.css
+++ b/Frontend/src/components/common/NavbarHamburger.module.css
@@ -1,10 +1,15 @@
 .hamburger {
   color: #7D7D7D;
-  font-size: 34px;
+  font-size: 2.5rem;
+}
+
+.hamburger:hover {
+  cursor: pointer;
 }
 
 .dropContainer {
-  height: 13rem !important;
+  padding-top: 1rem;
+  height: 15rem !important;
   border-radius: 0 0 6px 6px;
 }
 
@@ -16,8 +21,11 @@
 }
 
 .navLink {
-  margin: 0;
   text-decoration: none;
   color: var(--black);
-  font-size: 14px;
+  font-size: 100%;
+}
+
+.navLink:hover {
+  color: var(--point-color);
 }
