--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,6 +1,6 @@
 body{
   margin: 0;
-
+  --box-shadow: 1px 1px 10px -4px #858585;
   --point-color: #03A9F4;
   --button-color: #448AFF;
   --button-two-color: #774AF9;
@@ -19,4 +19,8 @@ p {
 
 * {
   font-family: 'Gmarket Sans TTF';
+}
+
+.Scene_scene__mRBD8{
+  position: absolute !important;
 }
