[FE]feat: Edit nav setting

--- a/Frontend/src/layout/Frame.module.css
+++ b/Frontend/src/layout/Frame.module.css
@@ -1,8 +1,8 @@
-.nonVisible {
-  display: none;
-}
-
 .mainContainer {
-  margin-top: 60px;
   min-height: 45rem;
 }
+
+.mainNotOnly {
+  margin-top: 60px;
+}
+
