--- a/Frontend/src/components/common/NftCard.module.css
+++ b/Frontend/src/components/common/NftCard.module.css
@@ -1,6 +1,6 @@
 .nftCardContainer {
     width: 246px;
-    height: 260px;
+    height: 270px;
     position: relative;
     transition: 2s;
     transition-timing-function: cubic-bezier(0.68, 0.55, 0.2, 1.3);
@@ -8,6 +8,7 @@
     perspective: 1100px;
     top: 0;
     left: 0;
+    display: flex;
 }
 
 .nftCardContainer.nftCardFlipped {
