--- a/Frontend/src/components/common/NftAuctionCard.module.css
+++ b/Frontend/src/components/common/NftAuctionCard.module.css
@@ -1,15 +1,15 @@
 .auctionCardWrapper {
     border-radius: 6px;
     box-shadow: var(--box-shadow);
-    width: 95%;
-    height: 80%;
+    width: 246px;
+    height: 310px;
     margin-left: 10px;
     font-size: 12px;
 }
 
 .auctionImg {
-    width: 100%;
-    height: 50%;
+    width: 246px;
+    height: 164px;
     object-fit: cover;
     border-top-right-radius: 6px;
     border-top-left-radius: 6px;
@@ -17,18 +17,19 @@
 
 .auctionTime, .auctionBid {
     display: inline-block;
-    margin-left: 30px;
+    margin-left: 40px;
 }
 
 .auctionTimeTxt, .auctionBidTxt {
     display: inline-block;
     width: 50px;
-    margin-left: 9px;
+    margin-left: 10px;
     margin-bottom: 7px;
 }
 
 .nftTitleText {
     padding: 6px 5px 9px 9px;
+    height: 55px;
     line-height: 20px; 
     font-size: 14px;
 }
@@ -36,7 +37,7 @@
 .btnWrapper {
     display: flex;
     justify-content: space-between;
-    margin: 3px 9px 0px 9px;
+    margin: 4px 9px 4px 9px;
 }
 
 .navLink {
