[FE]fix : Fix tab comp sliding

--- a/Frontend/src/components/meme/list/MemeListNew.module.css
+++ b/Frontend/src/components/meme/list/MemeListNew.module.css
@@ -1,7 +1,7 @@
 .memeListNewContainer {
   width: 100%;
   height: 100px;
-  background-color:blueviolet;
+  /* background-color:blueviolet; */
   position: absolute;
 }
 
