--- a/Frontend/src/components/meme/list/MemeListPopular.module.css
+++ b/Frontend/src/components/meme/list/MemeListPopular.module.css
@@ -1,6 +1,6 @@
 .memeListPopularContainer {
   width: 100%;
   height: 100px;
-  background-color: blue;
+  /* background-color: blue; */
   position: absolute;
 }
