--- a/Frontend/src/pages/HomePage.module.css
+++ b/Frontend/src/pages/HomePage.module.css
@@ -1,3 +1,23 @@
+.homeMenuWrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.homeMenuTitle {
+    margin: 15px;
+    font-size: 18px;
+}
+
+.listRouter {
+    text-decoration: none;
+    color: var(--disabled-gray-color);
+    font-size: 12px;
+    margin-right: 15px;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
 .auctionCarousel {
-    height: 330px !important;
+    height: 330px;
 }
