--- a/Frontend/src/pages/LandingPage.module.css
+++ b/Frontend/src/pages/LandingPage.module.css
@@ -1,20 +1,57 @@
-.canvas {
-    position:fixed;
-    left:0;
-    top:0;
+.container{
+    height:100vh;
+}
+.logowrapper{
+    position:absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height:100%;
+    width: 100%;
 }
 
-.sections {
-    position: relative;
-    z-index: 1;
+.logowrapper > span{
+    width: 35%;
+    height: 25%;
+}
+
+.logowrapper > span > img{
+    width: 100%;
+    height: 100%;
+}
+.logowrapper > p {
+    font-weight: bolder;
+    font-size: 30px;
+    color: var(--point-color)
+}
+
+.logowrapper > button{
+    margin-top: 10%;
 }
 
 .section {
-    box-sizing: border-box;
-    padding: 5rem;
-    height:100vh;
+    position: relative;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
 }
-.section h2{
-    margin:0;
-    font-size: 10vmin;
+.section > section {
+  position: absolute ;
+  height: 100%;
+  width: 100%;
+}
+/* .sectionDiv {
+  height: 100vh;
+  width: 100vw;
+} */
+
+.section1 {
+  background-color: var(--button-two-color)
+}
+.section2 {
+  background-color: var(--button-color)
+}
+.section3 {
+  background-color: var(--point-color);
 }
