--- a/Frontend/src/components/common/Footer.module.css
+++ b/Frontend/src/components/common/Footer.module.css
@@ -6,6 +6,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+
+  /* transform: "translateY(-100%)"; */
 }
 
 .footer p {
