--- a/Frontend/src/components/meme/list/MemeListNew.module.css
+++ b/Frontend/src/components/meme/list/MemeListNew.module.css
@@ -1,7 +1,12 @@
 .memeListNewContainer {
   width: 100%;
-  height: 100px;
-  /* background-color:blueviolet; */
+  height: 100%;
   position: absolute;
-}
 
+  padding-right: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
