--- a/Frontend/src/components/meme/list/MemeListPopular.module.css
+++ b/Frontend/src/components/meme/list/MemeListPopular.module.css
@@ -1,6 +1,42 @@
 .memeListPopularContainer {
   width: 100%;
-  height: 100px;
-  /* background-color: blue; */
+  height: 100%;
   position: absolute;
+/* background-color: red; */
+/* overflow: hidden; */
+
+
 }
+
+.sortContainer {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 3vh;
+  margin-left: 10%;
+}
+
+.sortContainer > div {
+  font-size: 13px;
+}
+:hover {
+  cursor: pointer;
+}
+
+.active {
+  color: var(--point-color);
+}
+
+.nonActive {
+  color: var(--disabled-gray-color);
+}
+
+
+.memeListCardContainer {
+  padding-right: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;  
+}
+
