--- a/Frontend/src/components/main/homepage/HomeCarousel.module.css
+++ b/Frontend/src/components/main/homepage/HomeCarousel.module.css
@@ -1,24 +1,31 @@
 .mainCarousel {
-    width: 100%;
-    height: 220px;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  height: 220px;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.mainCarousel > img{
+  width:100%;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
 }
 
-.carouselImg {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.mainCarousel > i{
+  z-index: 2;
+  margin: 0 5% 0 5%;
 }
 
 .carouselBtn {
-    width: 100px;
-    height: 30px;
-    position: absolute;
-    border: none;
-    border-radius: 6px;
-    color: var(--white-color);
-    background-color: var(--button-color);
+  position: absolute;
+  top:80%;
+  left:30%;
+  width: 8rem;
+  height: 1.5rem;
+  border: none;
+  border-radius: 1.5rem;
+  color: var(--white-color);
+  background-color: var(--button-color);
 }
