--- a/Frontend/src/pages/MemeDetailPage.module.css
+++ b/Frontend/src/pages/MemeDetailPage.module.css
@@ -45,13 +45,68 @@
 
 .memeImg {
     width: 100%;
-    height: 200px;
+    height: 30%;
     border-radius: 6px;
     margin-top: 10px;
+}
+
+.memeGuide {
+    font-size: 14px;
+    margin-top: 12px;
+    margin-bottom: 5px;
 }
 
 .memeDescription {
     font-size: 12px;
     line-height: 19px;
-    margin-top: 10px;
+    margin-bottom: 14px;
+}
+
+.memeOwner {
+    display: flex;
+    justify-content: space-between;
+    font-size: 13px;
+    margin-bottom: 10px;
+    
+}
+
+.ownerName {
+    width: 235px;
+}
+
+.heartGroup {
+    display: flex;
+    justify-content: space-between;
+    margin: 30px 30% 30px 30%;
+}
+.heartWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.heartImoji {
+    font-size: 40px;
+    border: 0.5px solid var(--point-color);
+    border-radius: 100%;
+    padding: 6px;
+    color: var(--point-color);
+}
+
+.heartNumber {
+    font-size: 12px;
+    margin-top: 3px;
+}
+
+.uploadAuctionBtn {
+    width: 300px;
+    height: 30px;
+    margin: auto;
+    background-color: var(--button-color);
+    color: var(--white-color);
+    border-radius: 6px;
+    font-size: 13px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
