--- a/Frontend/src/components/common/Footer.module.css
+++ b/Frontend/src/components/common/Footer.module.css
@@ -13,7 +13,7 @@
 
 .footer p {
   font-family: 'Gothic A1';
-  font-size: 0.6rem;
+  font-size: 8px;
   padding: 0.3%;
 }
 
@@ -24,6 +24,8 @@
 
 .info {
   color: var(--disabled-gray-color);
+  margin: 1% 18%;
+  text-align: center;
 }
 
 .copyright {
