[FE]feat: Change main page menu, dummy data

--- a/Frontend/src/components/main/homepage/HomeCarousel.module.css
+++ b/Frontend/src/components/main/homepage/HomeCarousel.module.css
@@ -6,9 +6,11 @@
   justify-content: space-between;
   align-items: center;
 }
+
 .mainCarousel > img{
   width:100%;
   height: 100%;
+  object-fit: cover;
   position: absolute;
   overflow: hidden;
 }
