--- a/Frontend/src/components/common/NavbarSearch.module.css
+++ b/Frontend/src/components/common/NavbarSearch.module.css
@@ -9,9 +9,10 @@
     left: 0%;
     width: 100%;
     height: 100%;
-    padding: 2% 5%;
+    padding: 10px 5%;
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 1rem;
 }
 
