--- a/Frontend/src/pages/MemeListPage.module.css
+++ b/Frontend/src/pages/MemeListPage.module.css
@@ -3,6 +3,12 @@
   flex-direction: column;
 }
 
+
+.notInputContainer {
+  height: calc(var(--vh, 1vh) * 80); 
+
+}
+
 .pageHeader {
   font-size: 1rem;
   font-weight: bold;
