--- a/Frontend/src/pages/MemeListPage.module.css
+++ b/Frontend/src/pages/MemeListPage.module.css
@@ -3,14 +3,16 @@
   flex-direction: column;
 }
 
-
-.notInputContainer {
-  height: calc(var(--vh, 1vh) * 80); 
-
-}
-
 .pageHeader {
-  font-size: 1rem;
+  font-size: 1.5rem;
   font-weight: bold;
   margin: 16px;
+}
+
+.notInputTxt {
+  margin: 5% 16px 10% 16px;
+}
+
+.searchArea {
+  transition: 100ms;
 }
