--- a/Frontend/src/components/notice/NoticeItem.module.css
+++ b/Frontend/src/components/notice/NoticeItem.module.css
@@ -1,15 +1,16 @@
 .itemWrapper{
+    height: 2.5rem;
     width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 6% 0% 6% 0%;
+    margin: 6% 0% 0% 0%;
     z-index: 0;
 }
 
 .avatar{
-    width: 4rem;
-    height: 3rem;
+    width: 4rem !important;
+    height: 100% !important;
     margin: 0 3% 0 3%;
 }
 .textWrapper{
