--- a/Frontend/src/pages/AuctionPage.module.css
+++ b/Frontend/src/pages/AuctionPage.module.css
@@ -23,10 +23,8 @@
 }
 
 .fullMoniterBtn{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    display: absolute;
+    margin-left: 35%;
     margin-top: 5%;
 }
 
