--- a/Frontend/src/components/meme/upload/MemeImageInput.module.css
+++ b/Frontend/src/components/meme/upload/MemeImageInput.module.css
@@ -66,6 +66,12 @@
 .contentImg {
     width: 100%;
     height: 100%;
+    /* object-fit: cover; */
+}
+
+.contentContainer > p {
+    font-size: 12px;
+    color: var(--disabled-gray-color);
 }
 
 
