--- a/Frontend/src/components/meme/upload/MemeInfoInput.module.css
+++ b/Frontend/src/components/meme/upload/MemeInfoInput.module.css
@@ -6,7 +6,7 @@
     border: 1px solid var(--section-line-color);
     border-radius: 6px;
     width: 100%;
-    height: 160px;
+    height: 120px;
     padding: 1% 2%;
 }
 
@@ -21,6 +21,12 @@
 .inputBox:focus {
     outline: none;
 }
+
+.inputBox::placeholder {
+    font-size: 12px;
+    color: var(--disabled-gray-color);
+}   
+
 
 .explanation {
     font-size: 10px;
