--- a/Frontend/src/components/meme/upload/MemeSituationInput.module.css
+++ b/Frontend/src/components/meme/upload/MemeSituationInput.module.css
@@ -1,4 +1,4 @@
-.titleInputContainer {
+.situationInputContainer {
     margin: 20px 0;
 }
 
@@ -6,15 +6,15 @@
     border: 1px solid var(--section-line-color);
     border-radius: 6px;
     width: 100%;
-    height: 50px;
+    height: 160px;
     padding: 1% 2%;
-    display: flex;
 }
 
 .inputBox {
     border: none;
-    width: 95%;
+    width: 100%;
     height: 100%;
+    resize: none;
     font-size: 18px;
 }
 
@@ -25,16 +25,8 @@
 .inputBox::placeholder {
     font-size: 12px;
     color: var(--disabled-gray-color);
-}
+}   
 
-.spinnerContainer {
-    width: 5%;
-    height: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    color: var(--point-color);
-}
 
 .explanation {
     font-size: 10px;
