--- a/Frontend/src/pages/MemeUploadPage.module.css
+++ b/Frontend/src/pages/MemeUploadPage.module.css
@@ -11,3 +11,10 @@
     margin: 30px 0;
     text-align: center;
 }
+
+.pageFooter {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 16px;
+}
