--- a/Frontend/src/components/meme/detail/CommentItem.module.css
+++ b/Frontend/src/components/meme/detail/CommentItem.module.css
@@ -10,7 +10,7 @@
     height: 40px;
     border-radius: 100%;
     object-fit: cover;
-    margin: 3px 0px 0px 2px;
+    margin-top: 5px;
 }
 
 .commentInfoWrapper {
@@ -44,7 +44,7 @@
 
 .commentBody {
     display: grid;
-    grid-template-columns: 6fr 1fr;
+    grid-template-columns: 7fr 1fr;
     font-size: 13px;
     margin: 5px 0px 5px 0px;
 }
@@ -55,7 +55,7 @@
 
 .iconWrapper {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
 }
 
