[FE]feat: Change text to variant, set comment redux store, toggle likes, props

--- a/Frontend/src/components/meme/detail/CommentItem.module.css
+++ b/Frontend/src/components/meme/detail/CommentItem.module.css
@@ -63,6 +63,12 @@
     font-size: 20px;
 }
 
+.heartFilledIcon {
+    font-size: 20px;
+    color: var(--impossible-color);
+    border: var(--impossible-color);
+}
+
 .userReaction {
    display: flex;
    font-size: 12px; 
