--- a/Frontend/src/components/meme/upload/MemeImageInput.module.css
+++ b/Frontend/src/components/meme/upload/MemeImageInput.module.css
@@ -59,8 +59,10 @@
     width: 100%;
     height: 80%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    padding: 5px;
+    gap: 1rem;
 }
 
 .contentImg {
@@ -69,7 +71,7 @@
     /* object-fit: cover; */
 }
 
-.contentContainer > p {
+.contentContainer > div {
     font-size: 12px;
     color: var(--disabled-gray-color);
 }
