[FE]feat: Add timer in auction

--- a/Frontend/src/components/auction/main/FinishModal.module.css
+++ b/Frontend/src/components/auction/main/FinishModal.module.css
@@ -1,4 +1,41 @@
-.modal{
-    width: 80%;
-    height: 70%
+.modal {
+  width: 80%;
+  height: 70%;
+}
+
+.wrapper {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 16px;
+}
+
+.nickname {
+  font-size: 24px;
+  font-weight: bold;
+  margin: 10% 0 0 0;
+  color: var(--point-color);
+}
+
+.cong {
+  font-size: 15px;
+  font-weight: bold;
+  color: var(--black-color);
+}
+
+.canvasDiv {
+  width: 80%;
+  height: 60%;
+}
+
+/* .canvas{
+  background-color: grey;
+} */
+
+.remainTime {
+  font-size: 8px;
+  font-weight: bold;
+  color: var(--section-line-color);
 }
