--- a/Frontend/src/components/meme/comment/CommentItem.module.css
+++ b/Frontend/src/components/meme/comment/CommentItem.module.css
@@ -76,3 +76,17 @@
    gap: 15px;
    margin-top: 4px;
 }
+
+.replyContainer {
+    font-size: 12px;
+    color: var(--disabled-gray-color);
+    display: flex;
+    gap: 1rem;
+    margin: 10px 0px 10px 0px;
+}
+
+.replyContainer hr {
+    width: 20px;
+    height: 0.5px;
+}
+
