[FE]feat: Change model

--- a/Frontend/src/components/auction/main/FinishModal.module.css
+++ b/Frontend/src/components/auction/main/FinishModal.module.css
@@ -39,3 +39,12 @@
   font-weight: bold;
   color: var(--section-line-color);
 }
+
+.exitBtn{
+  width: 6rem;
+  height:2rem
+}
+
+.exitContainer{
+  margin-top: 2rem;
+}
