--- a/Frontend/src/components/meme/detail/DetailInfo.module.css
+++ b/Frontend/src/components/meme/detail/DetailInfo.module.css
@@ -58,7 +58,7 @@
 
 .memeImg {
     width: 100%;
-    height: 30%;
+    height: 250px;
     border-radius: 6px;
     margin-top: 10px;
 }
@@ -90,20 +90,34 @@
 .heartGroup {
     display: flex;
     justify-content: space-between;
-    margin: 30px 30% 30px 30%;
+    margin: 30px 25% 30px 25%;
 }
 .heartWrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
+    width: 70px;
+    height: 95px;
 }
 
 .heartImoji {
-    font-size: 40px;
-    border: 0.5px solid var(--point-color);
-    border-radius: 100%;
-    padding: 6px;
+    font-size: 44px;
+    color: #AAB8C2;
+    margin-bottom: 5px;
+}
+.dislikeHeartImoji {
+    font-size: 44px;
+    margin-bottom: 5px;
     color: var(--point-color);
+}
+
+.dislikeBtn {
+    width: 70px;
+    height: 75.6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .heartNumber {
