--- a/Frontend/src/components/meme/detail/DetailInfo.module.css
+++ b/Frontend/src/components/meme/detail/DetailInfo.module.css
@@ -90,26 +90,29 @@
 .heartGroup {
     display: flex;
     justify-content: space-between;
-    margin: 30px 25% 30px 25%;
+    margin: 30px 23% 30px 23%;
 }
 .heartWrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    width: 70px;
-    height: 95px;
 }
 
 .heartImoji {
     font-size: 44px;
-    color: #AAB8C2;
+    color: var(--section-line-color);
     margin-bottom: 5px;
+    border: 0.5px solid var(--section-line-color);
+    border-radius: 100%;
+    padding: 6px;
 }
 .dislikeHeartImoji {
     font-size: 44px;
-    margin-bottom: 5px;
     color: var(--point-color);
+    border: 0.5px solid var(--point-color);
+    border-radius: 100%;
+    padding: 6px;
 }
 
 .dislikeBtn {
