--- a/Frontend/src/pages/MemeListPage.module.css
+++ b/Frontend/src/pages/MemeListPage.module.css
@@ -16,3 +16,11 @@
 .searchArea {
   transition: 100ms;
 }
+
+.loadingContainer {
+  width: 100%;
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
