--- a/Frontend/src/components/meme/comment/NewComment.module.css
+++ b/Frontend/src/components/meme/comment/NewComment.module.css
@@ -1,3 +1,12 @@
+.newCommentContainer {
+    position: sticky;
+    height: 60px;
+    margin-top: 180px;
+    bottom: 0px;
+    background-color: var(--white-color);
+
+}
+
 .commentContainer {
     width: 100%;
     border: 0.5px solid var(--section-line-color);
@@ -7,10 +16,31 @@
     padding: 5px;
 }
 
-.commentInputWrapper {
+.commentInputWrapper, .replyNotifierContainer {
     width: 100%;
     display: flex;
     align-items: center;
+}
+
+.replyNotifier {
+    width: 100%;
+    height: 20px;
+    font-size: 10px;
+    padding: 3px;
+    margin-left: 5px;
+}
+
+.cancelBtnWrapper {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding: 3px;
+    margin-right: 5px;
+}
+
+.cancelBtn{
+    color: var(--black-color);
+    font-size: 1rem;
 }
 
 .commentInputWrapper textarea {
@@ -42,3 +72,7 @@
     font-size: 2rem;
 }
 
+.submitDisableBtn {
+    font-size: 2rem;
+    color: var(--section-line-color);
+}
