--- a/Frontend/src/components/meme/list/MemeListPopular.module.css
+++ b/Frontend/src/components/meme/list/MemeListPopular.module.css
@@ -2,10 +2,7 @@
   width: 100%;
   height: 100%;
   position: absolute;
-/* background-color: red; */
-/* overflow: hidden; */
-
-
+  overflow: auto;
 }
 
 .sortContainer {
@@ -27,12 +24,12 @@
   color: var(--disabled-gray-color);
 }
 
-
 .memeListCardContainer {
   padding-right: 1rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  gap: 1rem;  
+  gap: 1rem;
+  
 }
