--- a/Frontend/src/components/meme/comment/CommentList.module.css
+++ b/Frontend/src/components/meme/comment/CommentList.module.css
@@ -1,3 +1,12 @@
 .commentItemWrapper {
     margin: 5px 0px 5px 0px;
 }
+
+
+.noCommentContainer {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
