[FE]feat: Change logo and modify landing page

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -2,6 +2,7 @@ body{
   margin: 0;
   --box-shadow: 1px 1px 10px -4px #858585;
   --point-color: #03A9F4;
+  --navy-color: #043763;
   --button-color: #448AFF;
   --button-two-color: #774AF9;
   --setting-color: #0277BD;
