--- a/Frontend/src/components/common/navbar/Navbar.module.css
+++ b/Frontend/src/components/common/navbar/Navbar.module.css
@@ -26,7 +26,7 @@
 }
 
 .logoTxt {
-  color: var(--point-color);
+  color: var(--navy-color);
   font-size: 1.1rem;
   margin: 10px 0 0 6px;
   font-weight: bold;
