--- a/Frontend/src/pages/setting/AuctionHistory.module.css
+++ b/Frontend/src/pages/setting/AuctionHistory.module.css
@@ -5,5 +5,14 @@
 }
 
 .bodyContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding:16px;
+    gap: 2rem;
+}
+
+.dataContainer{
+    width: 100%;
 }
