--- a/Frontend/src/components/auction/upload/UploadDropDown.module.css
+++ b/Frontend/src/components/auction/upload/UploadDropDown.module.css
@@ -5,20 +5,31 @@
     width: 100%;
     height: 3rem;
 }
-
+.dropdown > .p-dropdown-trigger{
+    width: 2rem !important;;
+}
 .optionItem{
     display:flex;
     flex-direction: row;
     justify-self: center;
     align-items: center;
     width:100%;
+    font-size: 12px !important;
+    font-weight: bold;
+    overflow: hidden;
 }
 
 .optionTitle{
     margin-left: 16px;
+    overflow: hidden;
 }
 
 .memeImg{
     border-radius: 6px;
     overflow: hidden;
+    width:25% !important;
+}
+
+.memeImg>img{
+    object-fit: cover;
 }
