--- a/Frontend/src/components/auction/upload/UploadModal.module.css
+++ b/Frontend/src/components/auction/upload/UploadModal.module.css
@@ -28,12 +28,14 @@
 
 .checkboxWrapper{
     font-size: 10px;
-    color: var(--section-line-color);
+    color: var(--disabled-gray-color);
     margin-top: 10%;
     display: flex;
     flex-direction: column;
 }
-
+.checkboxWrapper > p,span{
+    font-weight: normal;
+}
 .checkboxWrapper > div{
     display: flex;
     flex-direction: row;
