[FE]feat: Add auction-card time change and css

--- a/Frontend/src/components/common/card/NftAuctionCard.module.css
+++ b/Frontend/src/components/common/card/NftAuctionCard.module.css
@@ -20,6 +20,17 @@
     margin-left: 40px;
 }
 
+.pointTime {
+    animation: blink-effect 1s infinite;
+}
+
+@keyframes blink-effect {
+    50% {
+        opacity: 100%;
+        color: var(--impossible-color);
+    }
+}
+
 .auctionTimeTxt, .auctionBidTxt {
     display: inline-block;
     width: 50px;
