[FE]feat: add disabled auctionCard css

--- a/Frontend/src/components/common/card/NftAuctionCard.module.css
+++ b/Frontend/src/components/common/card/NftAuctionCard.module.css
@@ -23,13 +23,17 @@
 .pointTime {
     animation: blink-effect 1s infinite;
 }
-
 @keyframes blink-effect {
     50% {
         opacity: 100%;
         color: var(--impossible-color);
     }
 }
+
+.disabledTime {
+    color: var(--impossible-color);
+}
+
 
 .auctionTimeTxt, .auctionBidTxt {
     display: inline-block;
