[FE]feat: Add profile-page get axios

--- a/Frontend/src/components/profile/ProfileTabComp.module.css
+++ b/Frontend/src/components/profile/ProfileTabComp.module.css
@@ -7,10 +7,9 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
-  gap: 1rem;
+  gap: 1.5rem;
 }
 
 .notContent {
-  padding-bottom: 40%;
+  padding-top: 40%;
 }
