--- a/Frontend/src/components/settings/history/CommentHistoryItem.module.css
+++ b/Frontend/src/components/settings/history/CommentHistoryItem.module.css
@@ -4,8 +4,8 @@
   justify-content: start;
   align-items: center;
   width: 100%;
-  height: 3rem;
-  margin: 3% 0 3% 0;
+  margin: 3% 0;
+  padding: 0 3%;
 }
 
 .avatar {
