--- a/Frontend/src/components/auction/main/chat/ChatSideBar.module.css
+++ b/Frontend/src/components/auction/main/chat/ChatSideBar.module.css
@@ -1,6 +1,6 @@
 .sideBar{
     height: 63vh !important;
     border-radius: 20px 20px 0 0;
-    background-color: var(--section-line-color) !important;
+    background-color: rgba(255, 255, 255, 0.8) !important;
     color: white !important;
 }
