--- a/Frontend/src/components/notice/NoticeItem.module.css
+++ b/Frontend/src/components/notice/NoticeItem.module.css
@@ -1,10 +1,9 @@
 .itemWrapper{
-    height: 2.5rem;
     width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 6% 0% 0% 0%;
+    margin: 2% 0;
     z-index: 0;
 }
 
@@ -13,6 +12,11 @@
     height: 100% !important;
     margin: 0 3% 0 3%;
 }
+.memeImg > img {
+    object-fit: cover;
+    border-radius: 6px;
+}
+
 .textWrapper{
     width:100%;
 }
