--- a/Frontend/src/components/notice/NoticeList.module.css
+++ b/Frontend/src/components/notice/NoticeList.module.css
@@ -1,10 +1,8 @@
 .listWrapper {
     display: flex;
     flex-direction: column;
-    
 }
 
 .listWrapper > div > p {
-    margin-top: 10px;
-    margin-left: 16px;
+    margin: 10px 0 10px 16px;
 }
