--- a/Frontend/src/components/common/navbar/Navbar.module.css
+++ b/Frontend/src/components/common/navbar/Navbar.module.css
@@ -48,9 +48,13 @@
   border-radius: 50%;
 }
 
-
+.iconWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  width: 2rem;
+}
 .notification {
   color: #7D7D7D;
   font-size: 1.5rem;
-  margin-top: 3px;
 }
