--- a/Frontend/src/components/meme/comment/NewComment.module.css
+++ b/Frontend/src/components/meme/comment/NewComment.module.css
@@ -1,7 +1,7 @@
 .newCommentContainer {
     position: sticky;
     height: 60px;
-    margin-top: 400px;
+    margin-top: 20%;
     bottom: 0px;
     background-color: var(--white-color);
 
