--- a/Frontend/src/components/meme/comment/CommentList.module.css
+++ b/Frontend/src/components/meme/comment/CommentList.module.css
@@ -6,6 +6,7 @@
 .noCommentContainer {
     width: 100%;
     height: 100%;
+    padding-top: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
