--- a/Frontend/src/pages/HomePage.module.css
+++ b/Frontend/src/pages/HomePage.module.css
@@ -3,14 +3,22 @@
     justify-content: space-between;
 }
 
+.contour {
+    width: 100%;
+    height: 12px;
+    box-shadow: inset 0px 2px 8px 3px #a3a6ac4a;
+}
+
+
 .skeletonWrapper {
     display: flex;
     justify-content: center;
 }
 
 .homeMenuTitle {
-    margin: 25px 15px 15px 15px;
-    font-size: 18px;
+    margin: 20px 16px;
+    font-size: 17px;
+    font-weight: bold;
 }
 
 .listRouter {
@@ -21,6 +29,14 @@
     display: flex;
     justify-content: end;
     align-items: center;
+}
+
+.carouselCardContainer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 16px;
 }
 
 .auctionCarousel {
