--- a/Frontend/src/components/auction/main/list/BiddingHistoryItem.module.css
+++ b/Frontend/src/components/auction/main/list/BiddingHistoryItem.module.css
@@ -1,17 +1,18 @@
 .wraper {
   display: grid;
-  grid-template-columns: 4fr 2fr 1.5fr;
-  font-size: 12px;
+  grid-template-columns: 3fr 1fr 1fr;
+  font-size: 10px;
   font-weight: bold;
-  margin-bottom: 1rem;
+  margin-bottom: 0.8rem;
+  background-color: rgba(255, 255, 255, 0) !important;
 }
 
 .avatar {
   background-color: #2196f3 !important;
   color: #ffffff !important;
   min-width: 1rem;
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 1rem;
+  height: 1rem;
   margin-right: 0.3rem;
 }
 
