--- a/Frontend/src/components/auction/main/list/BiddingHistoryList.module.css
+++ b/Frontend/src/components/auction/main/list/BiddingHistoryList.module.css
@@ -1,17 +1,30 @@
 .wraper{
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 18%;
+    background-color: rgba(255, 255, 255, 0) !important;
 }
 
 .container{
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr 2fr 2fr;
-    font-size: 15px;
+    grid-template-columns: 3fr 1fr;
+    font-size: 12px;
     font-weight: bolder;
+    margin-top: 10px;
+    position: sticky;
+
 }
 
 .container > p > span{
-    font-size: 10px;
-    opacity: 0.5;
+    font-size: 7px;
+    color: var(--section-line-color);
+}
+
+.divider{
+    margin:5% !important;
+}
+
+.historyWraper{
+    height:82%;
+    overflow: auto;
 }
