--- a/Frontend/src/components/meme/upload/MemeImageInput.module.css
+++ b/Frontend/src/components/meme/upload/MemeImageInput.module.css
@@ -68,7 +68,7 @@
 .contentImg {
     width: 100%;
     height: 100%;
-    /* object-fit: cover; */
+    object-fit: cover;
 }
 
 .contentContainer > div {
