[FE]dsn: Change every css

--- a/Frontend/src/components/auction/upload/UploadModal.module.css
+++ b/Frontend/src/components/auction/upload/UploadModal.module.css
@@ -59,7 +59,7 @@
     width: 16%;
     height: 100%;
     border-radius: 50%;
-    background-color: var(--button-color);
+    background-color: var(--navy-color);
     display: flex;
     justify-content: center;
     align-items: center;
