--- a/Frontend/src/components/common/card/NftCardBack.module.css
+++ b/Frontend/src/components/common/card/NftCardBack.module.css
@@ -52,5 +52,5 @@
     width: 90px;
     height: 25px;
     border-radius: 4px;
-    background-color: var(--button-color);
+    background-color: var(--navy-color);
 }
