--- a/Frontend/src/components/common/tab/TabNavComp.module.css
+++ b/Frontend/src/components/common/tab/TabNavComp.module.css
@@ -28,7 +28,7 @@
 .tabBar {
   width: 20%;
   height: 2.5px;
-  background-color: var(--point-color);
+  background-color: var(--navy-color);
   border-radius: 6px;
   position: absolute;
   transition: all 300ms cubic-bezier(0.250, 0.250, 0.750, 0.750);
