--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -13,6 +13,7 @@ body{
   --impossible-color: #FE7171;
   --possible-color: #56FB67;
   --heart-color: rgb(249, 125, 145);
+  --red-color: #ea4444;
 }
 
 p {
