--- a/Frontend/src/pages/HomePage.module.css
+++ b/Frontend/src/pages/HomePage.module.css
@@ -19,6 +19,11 @@
     margin: 20px 16px;
     font-size: 17px;
     font-weight: bold;
+    display: flex;
+}
+
+.icon {
+    margin-right: 7px;
 }
 
 .listRouter {
