--- a/Frontend/src/components/meme/upload/MemeImageInput.module.css
+++ b/Frontend/src/components/meme/upload/MemeImageInput.module.css
@@ -25,7 +25,7 @@
 
 .customInputBtn {
     border-radius: 4px;
-    background-color: var(--button-color);
+    background-color: var(--navy-color);
     width: 4.5rem;
     height: 1.5rem;
     font-size: 0.8rem;
@@ -77,7 +77,7 @@
 }
 
 .errorBox {
-    border: 1px solid var(--impossible-color) !important;
+    border: 1px solid var(--red-color) !important;
 }
 
 .errorMsg {
