--- a/Frontend/src/pages/AuctionListPage.module.css
+++ b/Frontend/src/pages/AuctionListPage.module.css
@@ -4,7 +4,13 @@
 }
 
 .pageHeader {
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-weight: bold;
   margin: 16px;
+}
+
+.auctionImg {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
 }
