--- a/Frontend/src/pages/LandingPage.module.css
+++ b/Frontend/src/pages/LandingPage.module.css
@@ -21,6 +21,7 @@
 .logowrapper > span > img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 .logowrapper > button {
@@ -42,6 +43,7 @@
 .logowrapper > button > span > img{
   width: 100%;
   height:100%;
+  object-fit: cover;
 }
 
 
