--- a/Frontend/src/pages/setting/ImageEditPage.module.css
+++ b/Frontend/src/pages/setting/ImageEditPage.module.css
@@ -6,12 +6,12 @@
 }
 
 .submit{
-    color: var(--point-color);
+    color: var(--navy-color);
 }
 
 .body{
     padding: 16px;
-    font-size:20px;
+    font-size:18px;
     font-weight: bold;
 }
 .settingMenu {
@@ -48,7 +48,7 @@
 
 .selected{
     object-fit : cover;
-    border: 1.5px var(--point-color) solid;
+    border: 1.5px var(--navy-color) solid;
     width: 5rem !important;
     height: 5rem !important;
     margin-right: 6%;
