--- a/Frontend/src/pages/setting/ProfileEditPage.module.css
+++ b/Frontend/src/pages/setting/ProfileEditPage.module.css
@@ -6,7 +6,7 @@
 }
 
 .confirm {
-  color: var(--point-color);
+  color: var(--navy-color);
 }
 
 .bodyWrapper {
@@ -22,6 +22,7 @@
   align-items: center;
   width: 100%;
   position: relative;
+  object-fit: cover;
 }
 
 .avatar {
